2006-04-22  Junichi Uekawa  <dancer@debian.org>

	* pdebuild: give --uid/--gid options to pdebuild-internal

2006-04-01  Junichi Uekawa  <dancer@debian.org>

	* pdebuild: directory is moved after command-line is parsed.
	This should fix a few weird behaviors wrt relative directories, and 
	allow --help to work if there is no debian/ directory

2006-03-31  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-satisfydepends: spelling mistake, thanks pryzbyj for
	telling me. daner->dancer

2006-03-22  Junichi Uekawa  <dancer@debian.org>

	* pbuilderrc.5: spelling fix: s/extention/extension/

	* pbuilderrc:

	* pbuilder.8: 

2006-03-18  Junichi Uekawa  <dancer@debian.org>

	* testsuite/regression/287477-pkgname-logfile.sh: create regression

	* pbuilder.8: update documentation of --pkgname-logfile

	* pbuilder-buildpackage: allow chown, and add support for PKGNAME_LOGFILE_EXTENTION.
	
	* pbuilderrc (PKGNAME_LOGFILE_EXTENTION): add

	* pbuilderrc.5: document

2006-03-17  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-buildpackage (BUILDRESULTGID): chown/chgrp buildresult logfiles

2006-03-08  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: apply necessary formatting edition.

	* Documentation/Makefile (%.pdf): create PDF documentation out of pbuilder-doc.

	* Documentation/pbuilder-doc.xml: update amd64->i386 cross debootstrap command-line option.
	apparently, the --arch=i386 notation doesn't seem to work anymore.

2006-02-23  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-modules (pbuilder-options): remove NONUSMIRRORSITE

	* pbuilder.8: 
	* pbuilder-user-mode-linux.1: remove --nonusmirror

	* pbuilder-uml-checkparams: remove --nonusmirror

	* pbuilder-checkparams: remove --nonusmirror

	* pbuilder-modules (pbuilder-options): remove reference to  --nonusmirror [non-US mirror location] option.

	* pbuilderrc (MIRRORSITE): remove non-US

	* testsuite/regression/344089-initscripts-inetd-workaround-check.sh: remove, bugs are all resolved.
