@@ -1,7 +1,7 @@
 #! /bin/bash
 # common modules for pbuilder.
 #   pbuilder -- personal Debian package builder
-#   Copyright (C) 2001-2005 Junichi Uekawa
+#   Copyright (C) 2001-2006 Junichi Uekawa
 #
 #   This program is free software; you can redistribute it and/or modify
 #   it under the terms of the GNU General Public License as published by
