@@ -1,6 +1,6 @@
 #! /bin/bash
 #   pbuilder -- personal Debian package builder
-#   Copyright (C) 2001-2005 Junichi Uekawa
+#   Copyright (C) 2001-2006 Junichi Uekawa
 #
 #   This program is free software; you can redistribute it and/or modify
 #   it under the terms of the GNU General Public License as published by
