@@ -1,8 +1,10 @@
 pbuilder (0.152) UNRELEASED; urgency=low
 
   * fix pdebuild-internal, pass --uid/--gid options.
+    partially address some of #361362
+  * documentation update
 
- -- Junichi Uekawa <dancer@debian.org>  Sat, 22 Apr 2006 11:12:27 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Sat, 22 Apr 2006 13:20:58 +0900
 
 pbuilder (0.151) unstable; urgency=low
 
