@@ -1,5 +1,8 @@
 2006-04-22  Junichi Uekawa  <dancer@debian.org>
 
+	* Documentation/pbuilder-doc.xml: update docs on user-mode-linux usage.
+	add reference to PDF version.
+
 	* pdebuild: give --uid/--gid options to pdebuild-internal
 
 2006-04-01  Junichi Uekawa  <dancer@debian.org>
